--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/styled-engine": "^5.14.8",
     "axios": "^1.5.0",
+    "dompurify": "^3.0.5",
+    "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
