--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "dompurify": "^3.0.5",
     "formik": "^2.4.4",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
