--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/styled-engine": "^5.14.8",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "dompurify": "^3.0.5",
     "formik": "^2.4.4",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
