--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/styled-engine": "^5.14.8",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.5",
     "formik": "^2.4.4",
