--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
